--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       padding: 0;
       overflow: hidden;
       background: black;
+      font-family: 'Noto Sans JP', sans-serif;
     }
     video {
       position: fixed;
@@ -18,11 +19,34 @@
       height: 100vh;
       object-fit: cover;
     }
+    .text-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 1.4rem;
+      letter-spacing: 1px;
+      text-align: center;
+      opacity: 0;
+      animation: fadeIn 4s ease-in-out forwards 2s;
+      white-space: pre-line;
+      padding: 0 1.5rem;
+    }
+
+    @keyframes fadeIn {
+      to { opacity: 1; }
+    }
   </style>
 </head>
 <body>
   <video autoplay loop muted playsinline>
     <source src="78-135733055.mp4" type="video/mp4" />
   </video>
+
+  <div class="text-overlay">
+    this time, it’s nothing —<br>  
+    maybe just echo.
+  </div>
 </body>
 </html>
