--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       object-fit: cover;
     }
 
-    /* Мягкое затемнение от краёв */
     .vignette {
       position: fixed;
       top: 0; left: 0;
@@ -42,7 +41,6 @@
       text-align: center;
       opacity: 0;
       animation: fadeIn 4s ease-in-out forwards 2s;
-      white-space: pre-line;
       padding: 0 1.5rem;
     }
 
@@ -71,8 +69,7 @@
   <div class="vignette"></div>
 
   <div class="text-overlay">
-    this time, it’s nothing —<br>  
-    maybe just echo.
+    this time, it’s nothing — maybe just echo.
   </div>
 
   <div class="secondary-text">
