--- a/index.html
+++ b/index.html
@@ -77,3 +77,4 @@
   </div>
 </body>
 </html>
+<script defer data-domain="phantomecho666.github.io" src="https://plausible.io/js/script.js"></script>
