--- a/index.html
+++ b/index.html
@@ -77,4 +77,8 @@
   </div>
 </body>
 </html>
-<script defer data-domain="phantomecho666.github.io" src="https://plausible.io/js/script.js"></script>
+<head>
+  ...
+  <!-- Скрипт Plausible -->
+  <script defer data-domain="phantomecho666.github.io/phantom-echo" src="https://plausible.io/js/script.js"></script>
+</head>
