--- a/index.html
+++ b/index.html
@@ -60,11 +60,19 @@
       to { opacity: 1; }
     }
   </style>
+
+  <!-- Plausible Analytics script -->
+  <script defer data-domain="phantomecho666.github.io/phantom-echo" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
   <video autoplay loop muted playsinline>
     <source src="78-135733055.mp4" type="video/mp4" />
   </video>
+
+  <!-- Background audio -->
+  <audio autoplay loop preload="auto" style="display: none;">
+    <source src="breath,train,rain.mp3" type="audio/mp3" />
+  </audio>
 
   <div class="vignette"></div>
 
@@ -77,8 +85,3 @@
   </div>
 </body>
 </html>
-<head>
-  ...
-  <!-- Скрипт Plausible -->
-  <script defer data-domain="phantomecho666.github.io/phantom-echo" src="https://plausible.io/js/script.js"></script>
-</head>
