--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <!-- Аудио -->
   <audio id="bg-audio" preload="auto" loop>
-    <source src="breath,train,rain.mp3" type="audio/mp3">
+    <source src="breath-train-pain.mp3" type="audio/mp3">
   </audio>
 
   <!-- Запуск звука при первом касании -->
